# src/Wordle.TrackerSupreme.Web/openapi.json
@@ -1139,6 +1139,14 @@
 						"type": "number",
 						"format": "double",
 						"nullable": true
+					},
+					"guessDistribution": {
+						"type": "object",
+						"additionalProperties": {
+							"type": "integer",
+							"format": "int32"
+						},
+						"nullable": true
 					}
 				},
 				"additionalProperties": false
